fabric/testdata/out/ing_brexit-mgmt-test-dagordon-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"af1b8cad-f056-41e7-8e1a-388067925e31","deployment-id":"d-gk3e82tg9rbua8u7epih6sm1t","pipeline-id":"l-ngeow7caio7qdeiqsrnrfprjh"},"name":"brexit-mgmt-test-dagordon-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"brexit-mgmt-test-dagordon.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brexit-mgmt-test-dagordon","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-06-10T09:22:09Z"
  generation: 1
  labels:
    controller-uid: af1b8cad-f056-41e7-8e1a-388067925e31
    deployment-id: d-gk3e82tg9rbua8u7epih6sm1t
    pipeline-id: l-ngeow7caio7qdeiqsrnrfprjh
  name: brexit-mgmt-test-dagordon-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brexit-mgmt-test-dagordon
    uid: af1b8cad-f056-41e7-8e1a-388067925e31
  resourceVersion: "1357488325"
  uid: 83ec0985-88dc-437e-a872-461d93b23ef1
spec:
  rules:
  - host: brexit-mgmt-test-dagordon.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brexit-mgmt-test-dagordon
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
